--- a/src/client/src/App.css
+++ b/src/client/src/App.css
@@ -1,38 +1,38 @@
-.App {
-  text-align: center;
+@import '~antd/dist/antd.css';
+
+.ant-layout-header {
+	background-color: #fff;
+	padding: 0;
+	box-shadow: 0 1px 4px rgba(0, 21, 41, 0.08);
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.collapse-trigger {
+	height: 64px;
+	padding: 19px 24px;
+	font-size: 20px;
+	cursor: pointer;
+	transition: all 0.3s, padding 0s;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.header-action {
+	display: inline-block;
+	height: 100%;
+	padding: 0 12px;
+	cursor: pointer;
+	transition: all 0.3s;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header-dropdown-container {
+	background-color: #fff;
+	border-radius: 4px;
+	box-shadow: 0 2px 8px rgba(0, 0, 0, 0.15);
+	overflow: hidden;
+	max-width: 250px;
+	padding: 5px;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.ant-table {
+    border-radius: 4px;
+    border: 1px solid #d9d9d9;
+    padding-bottom: 1px;
 }
